Youtube clone alpha

--- a/youtube-clone/index.html
+++ b/youtube-clone/index.html
@@ -96,62 +96,175 @@
             <div class="primary">
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="youtube-light.png">
+                        <img src="public/images/youtube-light.png" loading="lazy" alt="thumbnail">
                     </div>
-                    <div class="title">TItle</div>
-                    <div class="channel">Channel</div>
-                    <div class="views">1M</div>
-                    <div class="posted">2020</div>
+                    <div class="meta">
+                        <div class="avatar">
+                            <img src="public/images/unnamed.jpg" loading="lazy" alt="channel">
+                        </div>
+                        <div class="title">Here is a Youtube clone built with HTML and CSS</div>
+                        <div class="channel">Gurvir Lochab</div>
+                        <div class="views">1M</div>
+                        <div class="posted">6 days</div>
+                    </div>
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="youtube-dark.png">
+                        <img src="public/images/youtube-dark.png" loading="lazy" alt="thumbnail">
                     </div>
-                    <div class="avatar"></div>
-                    <div class="title">Title</div>
-                    <div class="channel">Channel</div>
-                    <div class="views">1M</div>
-                    <div class="posted">2020</div>
+                    <div class="meta">
+                        <div class="avatar">
+                            <img src="public/images/pic.jpg" loading="lazy" alt="channel">
+                        </div>
+                        <div class="title">Here is a Youtube clone built with HTML and CSS</div>
+                        <div class="channel">Gurvir Lochab</div>
+                        <div class="views">5M</div>
+                        <div class="posted">3 months</div>
+                    </div>
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="youtube-design.png">
+                        <img src="public/images/youtube-light.png" loading="lazy" alt="thumbnail">
                     </div>
-                    <div class="title">TItle</div>
-                    <div class="channel">Channel</div>
-                    <div class="views">1M</div>
-                    <div class="posted">2020</div>
+                    <div class="meta">
+                        <div class="avatar">
+                            <img src="public/images/unnamed.jpg" loading="lazy" alt="channel">
+                        </div>
+                        <div class="title">Here is a Youtube clone built with HTML and CSS</div>
+                        <div class="channel">Gurvir Lochab</div>
+                        <div class="views">1M</div>
+                        <div class="posted">6 days</div>
+                    </div>
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="youtube-light.png">
+                        <img src="public/images/youtube-dark.png" loading="lazy" alt="thumbnail">
                     </div>
-                    <div class="title">TItle</div>
-                    <div class="channel">Channel</div>
-                    <div class="views">1M</div>
-                    <div class="posted">2020</div>
+                    <div class="meta">
+                        <div class="avatar">
+                            <img src="public/images/pic.jpg" loading="lazy" alt="channel">
+                        </div>
+                        <div class="title">Here is a Youtube clone built with HTML and CSS</div>
+                        <div class="channel">Gurvir Lochab</div>
+                        <div class="views">5M</div>
+                        <div class="posted">3 months</div>
+                    </div>
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="youtube-dark.png">
+                        <img src="public/images/youtube-light.png" loading="lazy" alt="thumbnail">
                     </div>
-                    <div class="avatar"></div>
-                    <div class="title">Title</div>
-                    <div class="channel">Channel</div>
-                    <div class="views">1M</div>
-                    <div class="posted">2020</div>
+                    <div class="meta">
+                        <div class="avatar">
+                            <img src="public/images/unnamed.jpg" loading="lazy" alt="channel">
+                        </div>
+                        <div class="title">Here is a Youtube clone built with HTML and CSS</div>
+                        <div class="channel">Gurvir Lochab</div>
+                        <div class="views">1M</div>
+                        <div class="posted">6 days</div>
+                    </div>
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="youtube-design.png">
+                        <img src="public/images/youtube-dark.png" loading="lazy" alt="thumbnail">
                     </div>
-                    <div class="title">TItle</div>
-                    <div class="channel">Channel</div>
-                    <div class="views">1M</div>
-                    <div class="posted">2020</div>
+                    <div class="meta">
+                        <div class="avatar">
+                            <img src="public/images/pic.jpg" loading="lazy" alt="channel">
+                        </div>
+                        <div class="title">Here is a Youtube clone built with HTML and CSS</div>
+                        <div class="channel">Gurvir Lochab</div>
+                        <div class="views">5M</div>
+                        <div class="posted">3 months</div>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="public/images/youtube-light.png" loading="lazy" alt="thumbnail">
+                    </div>
+                    <div class="meta">
+                        <div class="avatar">
+                            <img src="public/images/unnamed.jpg" loading="lazy" alt="channel">
+                        </div>
+                        <div class="title">Here is a Youtube clone built with HTML and CSS</div>
+                        <div class="channel">Gurvir Lochab</div>
+                        <div class="views">1M</div>
+                        <div class="posted">6 days</div>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="public/images/youtube-dark.png" loading="lazy" alt="thumbnail">
+                    </div>
+                    <div class="meta">
+                        <div class="avatar">
+                            <img src="public/images/pic.jpg" loading="lazy" alt="channel">
+                        </div>
+                        <div class="title">Here is a Youtube clone built with HTML and CSS</div>
+                        <div class="channel">Gurvir Lochab</div>
+                        <div class="views">5M</div>
+                        <div class="posted">3 months</div>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="public/images/youtube-light.png" loading="lazy" alt="thumbnail">
+                    </div>
+                    <div class="meta">
+                        <div class="avatar">
+                            <img src="public/images/unnamed.jpg" loading="lazy" alt="channel">
+                        </div>
+                        <div class="title">Here is a Youtube clone built with HTML and CSS</div>
+                        <div class="channel">Gurvir Lochab</div>
+                        <div class="views">1M</div>
+                        <div class="posted">6 days</div>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="public/images/youtube-dark.png" loading="lazy" alt="thumbnail">
+                    </div>
+                    <div class="meta">
+                        <div class="avatar">
+                            <img src="public/images/pic.jpg" loading="lazy" alt="channel">
+                        </div>
+                        <div class="title">Here is a Youtube clone built with HTML and CSS</div>
+                        <div class="channel">Gurvir Lochab</div>
+                        <div class="views">5M</div>
+                        <div class="posted">3 months</div>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="public/images/youtube-light.png" loading="lazy" alt="thumbnail">
+                    </div>
+                    <div class="meta">
+                        <div class="avatar">
+                            <img src="public/images/unnamed.jpg" loading="lazy" alt="channel">
+                        </div>
+                        <div class="title">Here is a Youtube clone built with HTML and CSS</div>
+                        <div class="channel">Gurvir Lochab</div>
+                        <div class="views">1M</div>
+                        <div class="posted">6 days</div>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="public/images/youtube-dark.png" loading="lazy" alt="thumbnail">
+                    </div>
+                    <div class="meta">
+                        <div class="avatar">
+                            <img src="public/images/pic.jpg" loading="lazy" alt="channel">
+                        </div>
+                        <div class="title">Here is a Youtube clone built with HTML and CSS</div>
+                        <div class="channel">Gurvir Lochab</div>
+                        <div class="views">5M</div>
+                        <div class="posted">3 months</div>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
