--- a/youtube-clone/index.html
+++ b/youtube-clone/index.html
@@ -96,7 +96,7 @@
             <div class="primary">
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="public/images/youtube-light.png" loading="lazy" alt="thumbnail">
+                        <img src="https://source.unsplash.com/random/320x240" loading="lazy" alt="thumbnail">
                     </div>
                     <div class="meta">
                         <div class="avatar">
@@ -110,7 +110,7 @@
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="public/images/youtube-dark.png" loading="lazy" alt="thumbnail">
+                        <img src="https://source.unsplash.com/random/320x240" loading="lazy" alt="thumbnail">
                     </div>
                     <div class="meta">
                         <div class="avatar">
@@ -124,7 +124,7 @@
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="public/images/youtube-light.png" loading="lazy" alt="thumbnail">
+                        <img src="https://source.unsplash.com/random/320x240" loading="lazy" alt="thumbnail">
                     </div>
                     <div class="meta">
                         <div class="avatar">
@@ -138,7 +138,7 @@
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="public/images/youtube-dark.png" loading="lazy" alt="thumbnail">
+                        <img src="https://source.unsplash.com/random/320x240" loading="lazy" alt="thumbnail">
                     </div>
                     <div class="meta">
                         <div class="avatar">
@@ -152,7 +152,7 @@
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="public/images/youtube-light.png" loading="lazy" alt="thumbnail">
+                        <img src="https://source.unsplash.com/random/320x240" loading="lazy" alt="thumbnail">
                     </div>
                     <div class="meta">
                         <div class="avatar">
@@ -166,7 +166,7 @@
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="public/images/youtube-dark.png" loading="lazy" alt="thumbnail">
+                        <img src="https://source.unsplash.com/random/320x240" loading="lazy" alt="thumbnail">
                     </div>
                     <div class="meta">
                         <div class="avatar">
@@ -180,7 +180,7 @@
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="public/images/youtube-light.png" loading="lazy" alt="thumbnail">
+                        <img src="https://source.unsplash.com/random/320x240" loading="lazy" alt="thumbnail">
                     </div>
                     <div class="meta">
                         <div class="avatar">
@@ -194,7 +194,7 @@
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="public/images/youtube-dark.png" loading="lazy" alt="thumbnail">
+                        <img src="https://source.unsplash.com/random/320x240" loading="lazy" alt="thumbnail">
                     </div>
                     <div class="meta">
                         <div class="avatar">
@@ -208,7 +208,7 @@
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="public/images/youtube-light.png" loading="lazy" alt="thumbnail">
+                        <img src="https://source.unsplash.com/random/320x240" loading="lazy" alt="thumbnail">
                     </div>
                     <div class="meta">
                         <div class="avatar">
@@ -222,7 +222,7 @@
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="public/images/youtube-dark.png" loading="lazy" alt="thumbnail">
+                        <img src="https://source.unsplash.com/random/320x240" loading="lazy" alt="thumbnail">
                     </div>
                     <div class="meta">
                         <div class="avatar">
@@ -236,7 +236,7 @@
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="public/images/youtube-light.png" loading="lazy" alt="thumbnail">
+                        <img src="https://source.unsplash.com/random/320x240" loading="lazy" alt="thumbnail">
                     </div>
                     <div class="meta">
                         <div class="avatar">
@@ -250,7 +250,7 @@
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="public/images/youtube-dark.png" loading="lazy" alt="thumbnail">
+                        <img src="https://source.unsplash.com/random/320x240" loading="lazy" alt="thumbnail">
                     </div>
                     <div class="meta">
                         <div class="avatar">
